--- a/public/style.css
+++ b/public/style.css
@@ -2,10 +2,6 @@ body {
   font-family: sans-serif;
 }
 
-a {
-  text-decoration: none;
-}
-
 label {
   display: block;
 }
@@ -24,6 +20,70 @@ form {
   display: flex;
   flex-direction: column;
 }
+
+/* search bar start */
+
+.dataResult {
+  margin-top: 5px;
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0 0.35) 0px 5px 15px;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.dataResult::-webkit-scrollbar {
+  display: none;
+}
+
+.dataResult .dataItem {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
+.dataItem p {
+  margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a > p:hover {
+  background-color: grey;
+}
+.searchInputs {
+  display: flex;
+}
+.search input {
+  background-color: white;
+  border: black solid 1px;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 300px;
+}
+
+.searchIcon {
+  height: 60px;
+  width: 50px;
+  background-color: grey;
+  display: grid;
+  place-items: center;
+}
+
+#clearBtn {
+  cursor: pointer;
+}
+
+/* search bar start */
 
 input,
 button {
