--- a/public/style.css
+++ b/public/style.css
@@ -132,6 +132,7 @@ ul {
   width: 300px;
   /* height: 50vh; */
   min-height: 100vh;
+  padding-bottom: 400px;
 }
 
 .ct-uc-empty {
@@ -160,6 +161,7 @@ ul {
   display: flex;
   padding: 1rem;
   width: 100%;
+  /* padding-bottom: 400px; */
 }
 
 .ct-checkout {
