--- a/public/style.css
+++ b/public/style.css
@@ -133,6 +133,21 @@ ul {
   color: white;
 }
 
+.react-link-ct {
+  text-decoration: none;
+  color: black;
+}
+
+.react-link-ct:hover {
+  text-decoration: underline;
+  color: black;
+}
+
+.react-link {
+  text-decoration: none;
+  color: black;
+}
+
 /* ---------------Navbar.js CSS--------------- */
 
 .navbar {
@@ -261,6 +276,8 @@ ul {
   display: flex;
   justify-content: center;
 }
+
+/* ---------------FrontPage.js CSS--------------- */
 
 /* ---------------Cart.js CSS--------------- */
 .ct {
@@ -645,6 +662,8 @@ ul {
   flex-direction: column;
   align-items: center;
   padding-top: 100px;
+  padding-bottom: 140px;
+  height: auto;
 }
 
 .oh-title h1 {
@@ -685,10 +704,6 @@ ul {
 .oh-order-item {
   display: flex;
   padding: 0.5rem;
-}
-
-.oh-order-item-img {
-  /* margin-left: 50px; */
 }
 
 .oh-order-item-img img {
@@ -816,14 +831,14 @@ ul {
   display: flex;
   height: auto;
   justify-content: center;
-  padding-top: 120px;
+  padding-top: 30px;
   padding-bottom: 20px;
 }
 
 .su-form {
   margin-top: 100px;
   width: 480px;
-  height: 580px;
+  height: 550px;
   display: flex;
   flex-direction: column;
   align-items: center;
