--- a/public/style.css
+++ b/public/style.css
@@ -917,3 +917,31 @@ ul {
   display: flex;
   justify-content: space-around;
 }
+
+/* -------------PAGINATE CSS---------------*/
+
+.paginationBttns {
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.paginationBttns a:hover {
+  color: white;
+  background-color: black;
+}
+
+.paginationActive a {
+  color: white;
+  background-color: black;
+}
