--- a/public/style.css
+++ b/public/style.css
@@ -1109,7 +1109,7 @@ input:focus {
   background-color: white;
   margin-top: 100px;
   width: 480px;
-  height: 550px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1158,6 +1158,44 @@ input:focus {
   cursor: pointer;
 }
 
+/* ---------------EditUser.js CSS--------------- */
+
+.formik-left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formik-left img {
+  width: 400px;
+  height: 400px;
+  object-fit: contain;
+}
+
+.formik-right {
+  flex: 1;
+  display: flex;
+}
+
+.edit-user h1 {
+  text-align: center;
+  display: inline-block;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+}
+
+.edit-user {
+  align-items: center;
+  height: auto;
+}
+
+.edit-user-btns {
+  display: flex;
+  justify-content: space-around;
+}
+
 /* ---------------Admin CSS--------------- */
 
 .inventory {
@@ -1174,20 +1212,11 @@ input:focus {
 }
 
 .formik-user {
-  margin-top: 10vh;
+  margin-top: 12vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column;
+  align-items: center; */
   min-height: calc(100vh - 25vh);
-}
-
-.edit-user {
-  align-items: center;
-}
-
-.edit-user-btns {
-  display: flex;
-  justify-content: space-around;
 }
 
 /* -------------PAGINATE CSS---------------*/
